force-app/main/default/objects/ADM_BCR_Division_Approver__c/ADM_BCR_Division_Approver__c.object-meta.xml
<CustomObject>
    <label>ADM BCR Division Approver</label>
    <nameField>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ADM BCR Division Approver</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>