force-app/main/default/objects/ADM_BCR_Division_Approver__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee</referenceTo>
    <relationshipLabel>ADM BCR Division Approver</relationshipLabel>
    <relationshipName>ADM_BCR_Division_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>