force-app/main/default/objects/ADM_BCR_Division_Approver__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <formula>Employee__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FullName</label>
    <type>Text</type>
</CustomField>