force-app/main/default/objects/ADM_BCR_Division_Approver__c/fields/UserID__c.field-meta.xml
<CustomField>
    <fullName>UserID__c</fullName>
    <formula>Employee__r.UserId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserID</label>
    <type>Text</type>
</CustomField>