force-app/main/default/objects/ADM_BCR_Division_Approver__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Division__c</columns>
    <columns>Employee__c</columns>
    <columns>UserID__c</columns>
    <columns>FullName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>